# proto-openapi

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
proto_openapi/: compiler.py
tests/: test_proto_openapi.py
tests/data/: descriptor  test_desc.pb
