[tool.poetry]
name = "proto-openapi"
version = "0.1.0"
description = ""
authors = ["Bulat Lutfullin <blutfullin@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^3.17.3"
grpcio-tools = "^1.39.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.7b0"
flake8-import-order = "^0.18.1"
flake8-black = "^0.2.3"
isort = "^5.9.3"

[tool.black]
line-length = 80 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "google" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
